deploy/production/production-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-app
  namespace: production
  labels:
    app: production-app
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-app    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: production-app
        group: db
    spec:
      containers:     # defines a running container inside the Pod
        - name: production-app
          # TODO: Add our app here
          image: adminer:4.7.6-standalone
          ports:
            - containerPort: 8080   # which port of the container is exposed to the Pod
          # TODO: Add app envs
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
