deploy/production/production-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-app
  namespace: production
  labels: 
    group: db
spec:
  type: ClusterIP
  selector:             # indicates into which pods ClusterIP provides access
    app: production-app
  ports:
    - port: 8080          # port exposed outside ClusterIP
      targetPort: 8080    # port exposed by Pod
