deploy/production/production-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-mysql
  namespace: production
spec:
  ports:
    - port: 3306
      name: production-mysql
  clusterIP: None
  selector:
    app: production-mysql
